<?xml version="1.0" encoding="utf-8"?>

<!--
Restaurant Roulette for Android
Copyright (C) 2014  Phil Shadlyn

Restaurant Roulette is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

@copyright 2014 Phil Shadlyn - physphil@gmail.com
@license GNU General Public License - https://www.gnu.org/licenses/gpl.html
-->

<resources>

    <string name="app_name">Restaurant Roulette</string>
    <string name="title_restaurant_list">Restaurant List</string>
    <string name="title_restaurant_selector">Pick A Restaurant</string>
    <string name="title_edit_restaurant">Edit Restaurant</string>
    <string name="title_new_restaurant">New Restaurant</string>
    <string name="title_restaurant_history">History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="email_subject">Restaurant Roulette Question</string>
    <string name="email_body">Your app is awesome!!  But&#8230;\n\n</string>

    <string name="restaurant_name">Name:</string>
    <string name="restaurant_genre">Genre:</string>
    <string name="restaurant_rating">Rating:</string>
    <string name="restaurant_price">Price:</string>
    <string name="restaurant_notes">Notes:</string>
    <string name="restaurant_selector_filter">Filter by:</string>
    <string name="restaurant_selector_button">Where should I eat?</string>
    <string name="restaurant_selector_button_pick_another">Screw that. Pick another one!</string>
    <string name="restaurant_number_visits">Number of visits: </string>
    <string name="restaurant_last_time_visited">Last visit: </string>
    <string name="restaurant_answer_header">And the answer is&#8230;</string>
    <string name="restaurant_get_directions">Get Directions</string>
    <string name="restaurant_name_hint">Enter restaurant name</string>

    <string name="menu_add_restaurant">Add Restaurant</string>
    <string name="menu_delete_all_restaurants">Delete All</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear_restaurant_history">Clear History</string>
    <string name="menu_help">Help</string>
    <string name="menu_email_developer">E-mail Developer</string>
    <string name="menu_rate_app">Rate App</string>

    <string name="btn_confirm">Ok, got it</string>
    <string name="btn_rate_now">Rate now!</string>
    <string name="btn_no_thanks">No thanks</string>
    <string name="btn_remind_me_later">Remind me later</string>
    <string name="dialog_delete_all_restaurants_title">Delete All Restaurants?</string>
    <string name="dialog_delete_all_restaurants_message">Are you sure you want to delete all your saved restaurants?</string>
    <string name="dialog_delete_restaurant_title">Delete Restaurant?</string>
    <string name="dialog_delete_restaurant_message">Are you sure you want to delete this restaurant?</string>
    <string name="dialog_delete_history_title">Clear History?</string>
    <string name="dialog_delete_history_message">Are you sure you want to clear your restaurant selection history?</string>
    <string name="dialog_restaurant_selector_help">Touch \"Where should I eat\" to pick a random restaurant from your list. You can filter by genre if you\'re in the mood for something specific.\n\nYou can pick another one if you don\'t like the suggestion&#8230; although that kind of defeats the purpose, no?\n\nTouch \"Get Directions\" to open Google Maps and find a nearby location.  Touch + to add a new restaurant to your list.</string>
    <string name="dialog_restaurant_list_help">This is a list of all your restaurants. Touch one to view more details, or touch + to add a new one.</string>
    <string name="dialog_restaurant_history_help">This is a list of all the restaurants that have been picked for you.\n\nOh, the memories.\n\nTouch + to add a new restaurant to your list.</string>
    <string name="dialog_edit_restaurant_help">This screen lets you edit the details of any restaurant. Go ahead and change the name, genre, rating or price level. You can even add notes to help you remember things.\n\nTouch \"Get Directions\" to open Google Maps and find a nearby location.</string>

    <string name="empty_listview_restaurants">Touch + in the menu bar to add a restaurant</string>
    <string name="empty_listview_history">Your restaurant history is empty</string>

    <string name="toast_no_restaurants_found">No specified restaurants could be found. Please add one and try again.</string>
    <string name="toast_no_restaurant_name">Please enter a name for the restaurant before searching</string>
    <string name="toast_no_maps_app">Sorry, you do not have a mapping application installed</string>
    <string name="toast_location_unavailable">Oops, we had trouble getting your current location</string>
    <string name="toast_google_play_error">Unable to open the Google Play store</string>

</resources>
