<!--
  Restaurant Roulette for Android
  Copyright (C) 2014  Phil Shadlyn

  Restaurant Roulette is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.

  @copyright 2014 Phil Shadlyn - physphil@gmail.com
  @license GNU General Public License - https://www.gnu.org/licenses/gpl.html
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.physphil.android.restaurantroulette.MainActivity" >

    <item android:id="@+id/menu_clear_restaurant_history"
        android:title="@string/menu_clear_restaurant_history"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="210"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="220"
        app:showAsAction="never" />

</menu>
