<?xml version="1.0" encoding="utf-8"?>

<!--
Restaurant Roulette for Android
Copyright (C) 2014  Phil Shadlyn

Restaurant Roulette is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

@copyright 2014 Phil Shadlyn - physphil@gmail.com
@license GNU General Public License - https://www.gnu.org/licenses/gpl.html
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_horizontal_card"
    android:paddingRight="@dimen/margin_horizontal_card"
    android:paddingTop="@dimen/margin_vertical_card"
    android:paddingBottom="@dimen/margin_vertical_card"
    android:background="@color/ics_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filter_layout"
            android:background="@drawable/card_background_normal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_selector_filter"
            android:id="@+id/selector_filter_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <include
            android:id="@+id/restaurant_genre_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/restaurant_genre_spinner"
            android:layout_below="@+id/selector_filter_text"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/margin_vertical_card"
            android:layout_marginLeft="@dimen/margin_horizontal_card_indent"/>

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_selector_button"
            android:id="@+id/btn_select_restaurant"
            android:layout_below="@id/filter_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_vertical_card"
            style="@style/button_blue" />

        <include
            layout="@layout/restaurant_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_answer_layout"
            android:layout_below="@id/btn_select_restaurant"
            android:layout_marginTop="@dimen/margin_vertical_card" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_get_directions"
            android:id="@+id/btn_get_directions"
            android:layout_below="@id/restaurant_answer_layout"
            android:layout_marginTop="@dimen/margin_vertical_card"
            style="@style/button_blue" />

    </RelativeLayout>

</ScrollView>